--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "clone-deep": "^4.0.0",
     "iview": "^3.1.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
