--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "lint-staged": "^7.2.2",
+    "mockjs": "^1.0.1-beta3",
     "vue-template-compiler": "^2.5.17"
   },
   "gitHooks": {
