--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clone-deep": "^4.0.0",
     "iview": "^3.1.1",
     "js-cookie": "^2.2.0",
+    "lodash": "^4.17.11",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
